lots of bugfixes, a new inspector UI, required stylesheet, much better docs

--- a/css/main.css
+++ b/css/main.css
@@ -94,9 +94,10 @@ textarea {
    ========================================================================== */
 
 
-
-
-
+pre {
+	max-width:30em;
+	font-size:80%;
+}
 
 
 
