--- a/css/singular.css
+++ b/css/singular.css
@@ -5,6 +5,12 @@
 	Description:
 	Purpose of the stylesheet follows.
 */
+[sg\:visible] {
+  display: none; }
+
+.sg-processing {
+  display: none; }
+
 .sgTemplate {
   display: none; }
 
